--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React.js Technical Test for Ta'al",
   "main": "server.js",
   "scripts": {
-    "start": "node ./server.js"
+    "start": "node ./server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
